--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo App</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" 
+    rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen">
 </head>
 
 <body>
 <header class="header">
     <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix">
-    <a class="header__info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <a class="header__info" 
+    href="https://goal-life.com/page/method/matrix-eisenhower">
+    Want more details?</a>
 </header>
 <main class="main__content">
     <section>
@@ -30,7 +33,8 @@
             <input type="text" class="task__item">
             <button class="task__action--edit">Edit</button>
             <button class="task__action--delete">
-                <img src="./remove.svg" alt="remove button" class="task__action--img">
+                <img src="./remove.svg" alt="remove button" 
+                class="task__action--img">
             </button>
         </li>
         <li class="editMode">
@@ -39,7 +43,8 @@
             <input type="text" value="Go Shopping" class="task__item">
             <button class="task__action--edit">Save</button>
             <button class="task__action--delete">
-                <img src="./remove.svg" alt="remove button" class="task__action--img">
+                <img src="./remove.svg" alt="remove button" 
+                class="task__action--img">
             </button>
         </li>
         </ul>
@@ -53,7 +58,8 @@
             <input type="text" class="task__item">
             <button class="task__action--edit">Edit</button>
             <button class="task__action--delete">
-                <img src="./remove.svg" alt="remove button" class="task__action--img">
+                <img src="./remove.svg" alt="remove button" 
+                class="task__action--img">
             </button>
         </li>
         </ul>
